# zerobit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: bench.yml  coverage.yml  release.yml  tests_and_checks.yml
benches/: a_benchmark.rs
cli/: main.py
gptzero/: pyproject.toml
gptzero-cli/: pyproject.toml
src/: lib.rs
src/agent/: mod.rs  tool_agent.rs
src/memory/: mod.rs
src/model/: anthropic.rs  cohere.rs  mod.rs  openai.rs
src/prompt/: template.rs
src/tool/: mod.rs
src/workflow/trigger/: webhook.rs
tests/models/: test_openai.py
versa/: Cargo.toml
versa-agent/: Cargo.toml
versa-agent/src/: lib.rs  permissions.rs
versa-agent/src/agent/: mod.rs  simple_agent.rs
versa-chain/: Cargo.toml
versa-chain/examples/: simple_chain.rs  simple_chain_many.rs
versa-chain/src/: error.rs  lib.rs  traits.rs
versa-chain/src/simple_chain/: chain.rs
versa-cli/: Cargo.toml
versa-common/: Cargo.toml
versa-common/inner-macros/: Cargo.toml
versa-common/inner-macros/src/: lib.rs
versa-common/src/: lib.rs  pattern.rs  traits.rs  utils.rs
versa-memory/: Cargo.toml
versa-memory/src/: lib.rs
versa-middleware/: Cargo.toml
versa-middleware/src/: lib.rs  traits.rs
versa-model/: Cargo.toml
versa-model/examples/: model_basic.rs  model_config.rs  model_prompt.rs  model_stream.rs
versa-model/src/: error.rs  lib.rs  traits.rs
versa-model/src/openai/: config.rs  error.rs  input.rs  kind.rs  mod.rs  model.rs  stream.rs  types.rs
versa-prompt/: Cargo.toml
versa-prompt/benches/: prompt.rs
versa-prompt/examples/: prompt_basic.rs  prompt_roles.rs  prompt_select.rs
versa-prompt/src/: error.rs  lib.rs  macros.rs  prompt.rs  traits.rs
versa-store/: Cargo.toml
versa-store/src/: lib.rs
versa-thread/: Cargo.toml
versa-thread/examples/: simple_thread.rs  thread_basic.rs
versa-thread/src/: error.rs  lib.rs  traits.rs
versa-thread/src/basic_thread/: thread.rs
versa-thread/src/simple_thread/: thread.rs
versa-tool/: Cargo.toml
versa-tool/src/: lib.rs
versa-transformers/: Cargo.toml
versa-workflow/: Cargo.toml
versa-workflow/src/: lib.rs
versa-workflow/src/trigger/: http.rs
versa/src/: lib.rs
zero/: __init__.py
zero/agents/: base.py
zero/models/: __init__.py  anthropic.py  base.py  cohere.py  openai.py
zero/prompts/: template.py
zerobit/: Cargo.toml
zerobit-agent/: Cargo.toml
zerobit-chain/: Cargo.toml
zerobit-chain/src/: lib.rs  traits.rs
zerobit-common/: Cargo.toml
zerobit-common/inner-macros/src/: lib.rs
zerobit-common/src/: config.rs  lib.rs  pattern.rs  traits.rs
zerobit-memory/: Cargo.toml
zerobit-model/: Cargo.toml
zerobit-model/examples/: model_basic.rs  model_stream_output.rs  prompt.rs  stream_output.rs
zerobit-model/src/: error.rs  traits.rs
zerobit-model/src/openai/: config.rs  mod.rs  model.rs  stream.rs
zerobit-prompt/: Cargo.toml
zerobit-prompt/benches/: prompt.rs
zerobit-prompt/examples/: prompt_basic.rs  prompt_roles.rs
zerobit-prompt/src/: lib.rs  prompt.rs  traits.rs
zerobit-tool/: Cargo.toml
zerobit-transformers/: Cargo.toml
zerobit-workflow/: Cargo.toml
zerobit-workflow/src/trigger/: mod.rs
zerobit/src/: lib.rs
