[tool.poetry]
name = "zero"
version = "0.1.0"
description = ""
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
zero = "cli.main:main"

[tool.poe.tasks]
zero = "poetry run zero"
fmt = "black zero cli tests"
lint = "pylint zero cli tests"
type = "mypy zero cli tests"
test = "pytest -v"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"
mypy = "^1.2.0"
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
