[tool.poetry]
name = "gptzero-cli"
version = "0.1.0"
description = ""
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
readme = "README.md"
packages = [{include = "gptzero_cli"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
