[package]
name = "versa-chain"
version = "0.1.0"
description = "A library for common objects across the versa project"
keywords = []
categories = []
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/versa"
repository = "https://github.com/nyprothegeek/versa"
authors = ["Stephen Akinyemi <steveakinyemi@gmail.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
serde = { version = "1.0.174", features = ["derive"] }
thiserror = "1.0.44"
versa-common = { version = "0.1.0", path = "../versa-common" }
versa-model = { version = "0.1.0", path = "../versa-model" }
versa-prompt = { version = "0.1.0", path = "../versa-prompt" }
versa-middleware = { version = "0.1.0", path = "../versa-middleware" }
async-trait = "0.1.72"
futures = "0.3.28"

[features]
default = []

[dev-dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
tokio = "1.29.1"
