[package]
name = "versa-memory"
version = "0.1.0"
description = "A library for working with memories"
keywords = []
categories = []
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/versa"
repository = "https://github.com/zerocore-ai/versa"
authors = ["Stephen Akinyemi <steveakinyemi@gmail.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.179", features = ["derive"] }

[features]
default = []
