[package]
name = "versa-thread"
version = "0.1.0"
description = "A library for creating language model threads."
keywords = []
categories = []
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/versa"
repository = "https://github.com/zerocore-ai/versa"
authors = ["Stephen Akinyemi <steveakinyemi@gmail.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "1.0.49"
versa-common = { version = "0.1.0", path = "../versa-common" }
versa-model = { version = "0.1.0", path = "../versa-model", features = [
    "openai",
] }
versa-prompt = { version = "0.1.0", path = "../versa-prompt" }
versa-middleware = { version = "0.1.0", path = "../versa-middleware" }
async-trait = "0.1.73"
futures = "0.3.28"

[features]
default = []

[dev-dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
tokio = "1.29.1"
