[package]
name = "versa-tool"
version = "0.1.0"
description = "Tools for working with versa agents"
keywords = []
categories = []
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/versa"
repository = "https://github.com/nyprothegeek/versa"
authors = ["Stephen Akinyemi <steveakinyemi@gmail.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1.74"
derive_builder = "0.12.0"
proptest = { version = "1.3", optional = true }
serde = { version = "1.0.192", features = ["derive"] }

[features]
default = []
test_utils = ["proptest"]
